# ChatUp

./: CHANGELOG.md  DEVELOP.md  README.md  pyproject.toml  setup.md
.github/workflows/: ci.yml  publish.yml
cli-tests/: chatup-uv.md
docs/: README.md
mock-cli-tests/: chatup-uv.md
src/chatup/: __init__.py  cli.py  const.py
src/chatup/config/: __init__.py
src/chatup/setup/: alias.py  cc_connect.py  chrome.py  claude.py  cli.py  codex.py  docker.py  elements.py  frp.py  hermes.py  lark_cli.py  mode_prompt.py  nodejs.py  opencode.py  opencode_chatloop.py  shell_rc.py  uv.py  workspace.py  zsh.py
src/chatup/setup/workspace/: cli.py  options.py  render.py
src/chatup/setup/workspace/templates/default/en/: AGENTS.md
src/chatup/setup/workspace/templates/default/zh/: AGENTS.md
src/chatup/utils/: custom_logger.py  pathing.py
tests/: test_pyproject_metadata.py  test_setup_cli.py  test_version.py  test_workspace_setup.py
