[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatup"
dynamic = ["version"]
description = "ChatArch setup CLI extracted from ChatTool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "click>=8.0",
    "chatstyle>=0.1.0",
    "chatenv>=0.1.2",
    "colorama",
]
authors = [{name = "rexwzh", email = "1073853456@qq.com"}]
keywords = ["chatup", "chatarch", "setup", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
chatup = "chatup.cli:main"

[project.entry-points."chatenv.configs"]
chatup = "chatup.config"

[tool.setuptools.dynamic]
version = {attr = "chatup.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"chatup.setup" = [
    "assets/*.sh",
    "assets/hermes/*.sh",
    "assets/opencode_chatloop/README.md",
    "assets/opencode_chatloop/commands/*.md",
    "assets/opencode_chatloop/plugins/chatloop/*",
    "workspace/templates/default/zh/*.md",
    "workspace/templates/default/zh/projects/*.md",
    "workspace/templates/default/en/*.md",
    "workspace/templates/default/en/projects/*.md",
]
